@@ -18,11 +18,15 @@ import javax.sound.sampled.AudioFormat;
 import javax.sound.sampled.AudioInputStream;
 import javax.sound.sampled.AudioSystem;
 
-import net.sf.saxon.s9api.QName;
+import net.sf.saxon.s9api.XdmNode;
 
-import org.daisy.pipeline.tts.BasicSSMLAdapter;
-import org.daisy.pipeline.tts.MarkFreeTTSService;
-import org.daisy.pipeline.tts.SSMLAdapter;
+import org.daisy.pipeline.audio.AudioBuffer;
+import org.daisy.pipeline.tts.AbstractTTSService;
+import org.daisy.pipeline.tts.AudioBufferAllocator;
+import org.daisy.pipeline.tts.AudioBufferAllocator.MemoryException;
+import org.daisy.pipeline.tts.SoundUtil;
+import org.daisy.pipeline.tts.TTSRegistry.TTSResource;
+import org.daisy.pipeline.tts.TTSServiceUtil;
 import org.daisy.pipeline.tts.Voice;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -32,50 +36,26 @@ import org.slf4j.LoggerFactory;
  * 
  * This is a naïve implementation which just discards all SSML tagging.
  */
-public class OSXSpeechTTS extends MarkFreeTTSService {
+public class OSXSpeechTTS extends AbstractTTSService {
 
 	private Logger mLogger = LoggerFactory.getLogger(OSXSpeechTTS.class);
 
 	private AudioFormat mAudioFormat;
-	private SSMLAdapter mSSMLAdapter;
 	private String mSayPath = "/usr/bin/say";
 	private final static int MIN_CHUNK_SIZE = 2048;
 	private final static String SAY_PATH = "tts.osxspeech.path";
 
-	public void onBeforeOneExecution() throws SynthesisException {
+	public void onBeforeOneExecution() throws SynthesisException, InterruptedException {
 		mSayPath = System.getProperty(SAY_PATH, "/usr/bin/say");
 		mLogger.info("Will use 'say' binary: " + mSayPath);
 
-		mSSMLAdapter = new BasicSSMLAdapter() {
-
-			@Override
-			public QName adaptElement(QName elementName) {
-				return null;
-			}
-
-			@Override
-			public String getFooter() {
-				return "";
-			}
-		};
-
 		// Test the synthesizer so that the service won't be active if it fails.
 		// It sets mAudioFormat too.
-		List<RawAudioBuffer> li = new ArrayList<RawAudioBuffer>();
 		mAudioFormat = null;
-		Object r = allocateThreadResources();
-		try {
-			synthesize(
-					mSSMLAdapter.getHeader(null) + "test"
-							+ mSSMLAdapter.getFooter(), null, r, li);
-		} catch (InterruptedException e) {
-			throw new SynthesisException(e);
-		} finally {
-			releaseThreadResources(r);
-		}
-		if (li.get(0).offsetInOutput <= 500) {
-			throw new SynthesisException(
-					"the 'say' command did not output audio.");
+		Throwable t = TTSServiceUtil.testTTS(this, "test");
+
+		if (t != null) {
+			throw new SynthesisException("the 'say' command did not output audio.", t);
 		}
 	}
 
@@ -107,8 +87,9 @@ public class OSXSpeechTTS extends MarkFreeTTSService {
 		Scanner scanner = null;
 		Matcher mr;
 		try {
-			proc = Runtime.getRuntime().exec(
-					new String[] { mSayPath, "-v", "?" });
+			proc = Runtime.getRuntime().exec(new String[]{
+			        mSayPath, "-v", "?"
+			});
 			is = proc.getInputStream();
 			mr = Pattern.compile("(.*?)\\s+\\w{2}_\\w{2}").matcher("");
 			scanner = new Scanner(is);
@@ -133,66 +114,71 @@ public class OSXSpeechTTS extends MarkFreeTTSService {
 	}
 
 	@Override
-	public SSMLAdapter getSSMLAdapter() {
-		return mSSMLAdapter;
-	}
-
-	@Override
-	public void synthesize(String ssml, Voice voice, Object threadResources,
-			List<RawAudioBuffer> output) throws SynthesisException,
-			InterruptedException {
+	public Collection<AudioBuffer> synthesize(String text, XdmNode xmlText, Voice voice,
+	        TTSResource threadResources, List<Mark> marks,
+	        AudioBufferAllocator bufferAllocator, boolean retry) throws SynthesisException,
+	        InterruptedException, MemoryException {
+		Collection<AudioBuffer> result = new ArrayList<AudioBuffer>();
 		Process p = null;
 		File waveOut = null;
 		try {
 
 			waveOut = File.createTempFile("pipeline", ".wav");
-			p = Runtime.getRuntime().exec(
-					new String[] { mSayPath, "--data-format=LEI16@22050", "-o",
-							waveOut.getAbsolutePath() });
+			p = Runtime.getRuntime().exec(new String[]{
+			        mSayPath, "--data-format=LEI16@22050", "-o", waveOut.getAbsolutePath()
+			});
 
-			// write the SSML
-			BufferedOutputStream out = new BufferedOutputStream(
-					(p.getOutputStream()));
-			out.write(ssml.getBytes("utf-8"));
+			// write the sentence
+			BufferedOutputStream out = new BufferedOutputStream((p.getOutputStream()));
+			out.write(text.getBytes("utf-8"));
 			out.close();
 
 			p.waitFor();
 
 			// read the wave on the standard output
 
-			BufferedInputStream in = new BufferedInputStream(
-					new FileInputStream(waveOut));
+			BufferedInputStream in = new BufferedInputStream(new FileInputStream(waveOut));
 			AudioInputStream fi = AudioSystem.getAudioInputStream(in);
 
 			if (mAudioFormat == null)
 				mAudioFormat = fi.getFormat();
 
 			while (true) {
-				RawAudioBuffer b = new RawAudioBuffer();
-				int toread = MIN_CHUNK_SIZE + fi.available();
-				b.output = new byte[toread];
-				b.offsetInOutput = fi.read(b.output, 0, toread);
-				if (b.offsetInOutput == -1)
+				AudioBuffer b = bufferAllocator
+				        .allocateBuffer(MIN_CHUNK_SIZE + fi.available());
+				int ret = fi.read(b.data, 0, b.size);
+				if (ret == -1) {
+					//note: perhaps it would be better to call allocateBuffer()
+					//somewhere else in order to avoid this extra call:
+					bufferAllocator.releaseBuffer(b);
 					break;
-				output.add(b);
+				}
+				b.size = ret;
+				result.add(b);
 			}
 
 			fi.close();
+		} catch (MemoryException e) {
+			SoundUtil.cancelFootPrint(result, bufferAllocator);
+			p.destroy();
+			throw e;
 		} catch (InterruptedException e) {
+			SoundUtil.cancelFootPrint(result, bufferAllocator);
 			if (p != null)
 				p.destroy();
 			throw e;
 		} catch (Exception e) {
+			SoundUtil.cancelFootPrint(result, bufferAllocator);
 			StringWriter sw = new StringWriter();
 			e.printStackTrace(new PrintWriter(sw));
 			if (p != null)
 				p.destroy();
 			throw new SynthesisException(e.getMessage() + " text: "
-					+ ssml.substring(0, Math.min(ssml.length(), 100)) + "...",
-					e);
+			        + text.substring(0, Math.min(text.length(), 100)) + "...", e);
 		} finally {
 			if (waveOut != null)
 				waveOut.delete();
 		}
+		return result;
 	}
 }
